--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.dax-block pre {
+pre.dax-code {
   background-color: #1e1e1e;
   color: #f5f5f5;
   padding: 1rem;
@@ -7,15 +7,15 @@
   font-family: Consolas, monospace;
 }
 
-.dax-block .function {
+pre.dax-code .dax-func {
   color: #569cd6;
   font-weight: bold;
 }
 
-.dax-block .column {
+pre.dax-code .dax-col {
   color: #9cdcfe;
 }
 
-.dax-block .table {
+pre.dax-code .dax-table {
   color: #c586c0;
 }
