--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,19 @@
 
 @import "{{ site.theme }}";
 
+/* Rouge Code Highlighting */
+.highlight {
+  margin: 30px 0 0 0;
+  background: #fff;
+  border: 1px solid #e6e6e6;
+  padding: 1rem;
+  border-radius: 8px;
+  overflow-x: auto;
+  font-family: Consolas, monospace;
+  font-size: 14px;
+  color: #333;
+}
+
 /* DAX Code Styling */
 pre.dax-code {
   margin: 30px 0 0 0;
